--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,14 @@
 {% extends "base.html" %}
+{% include "modules/header.html" %}
 {% block content %}
-<section id="content">
-{% block content_title %}
-<h2>All articles</h2>
-{% endblock %}
-
-<ol id="post-list">
-{% for article in articles_page.object_list %}
-        <li><article class="hentry">
-                <header> <h2 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2> </header>
-                <footer class="post-info">
-                    <time class="published" datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }} </time>
-                    <address class="vcard author">By
-                    {% for author in article.authors %}
-                        <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
-                    {% endfor %}
-                    </address>
-                </footer><!-- /.post-info -->
-                <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
-        </article></li>
-{% endfor %}
-</ol><!-- /#posts-list -->
-{% if articles_page.has_other_pages() %}
-    {% include 'pagination.html' %}
-{% endif %}
-</section><!-- /#content -->
+<div class="portfolio">
+    {% for name, link, image, vid in FEATURED %}
+    <div class="portfolio-entry"> 
+        <video class="portfolio-video" autoplay loop muted playsinline src="{{vid}}" type="video/webm"></video>
+        <div class="portfolio-shadow"></div>
+        <h2 class="portfolio-name">{{name}}</h2>
+        <a class="portfolio-image" href="{{link}}" target="_blank"><img src="{{image}}" alt=""></img></a>
+    </div>	
+    {% endfor %}
+</div>
 {% endblock content %}
