--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <div class="portfolio-shadow"></div>
         <h2 class="portfolio-name">{{name}}</h2>
         <a class="portfolio-image" href="{{link}}" target="_blank"><img src="{{image}}" alt=""></img></a>
+        <div class="portfolio-shadow"></div>
     </div>	
     {% endfor %}
 </div>
