--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@ a {
   color: #975d5d;
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: underline;
 }
@@ -37,6 +38,7 @@ h1 {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h2 {
   margin-block-start: inherit !important;
   white-space: nowrap;
@@ -44,6 +46,7 @@ h2 {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h3 {
   margin-block-start: inherit !important;
   white-space: nowrap;
@@ -51,6 +54,7 @@ h3 {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h4 {
   margin-block-start: inherit !important;
   white-space: nowrap;
@@ -58,6 +62,7 @@ h4 {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h5 {
   margin-block-start: inherit !important;
   white-space: nowrap;
@@ -65,6 +70,7 @@ h5 {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h6 {
   margin-block-start: inherit !important;
   white-space: nowrap;
@@ -72,6 +78,7 @@ h6 {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 p {
   margin-block-start: inherit !important;
   margin-block-end: inherit !important;
@@ -85,30 +92,35 @@ h1 a {
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h2 a {
   margin-block-start: inherit !important;
   margin-block-end: inherit !important;
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h3 a {
   margin-block-start: inherit !important;
   margin-block-end: inherit !important;
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h4 a {
   margin-block-start: inherit !important;
   margin-block-end: inherit !important;
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h5 a {
   margin-block-start: inherit !important;
   margin-block-end: inherit !important;
   color: inherit !important;
   font-family: BebasNeue Bold;
 }
+
 h6 a {
   margin-block-start: inherit !important;
   margin-block-end: inherit !important;
@@ -124,8 +136,8 @@ h6 a {
   align-content: flex-start;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
   height: auto;
   min-height: 35rem;
   width: auto;
@@ -260,6 +272,7 @@ article.dark {
   padding-right: 10px;
   font-family: Cambria;
 }
+
 .article-info p,
 .article-info a {
   display: inline-block;
@@ -267,6 +280,8 @@ article.dark {
 
 .article-content {
   padding-bottom: 30px;
+  font-family: Cambria;
+  white-space: break-spaces;
 }
 
 /* Pagination */
@@ -337,6 +352,7 @@ header {
   color: #c2c0bd;
   background-color: #5f5f63;
 }
+
 header.dark {
   color: #b2b5b8;
   background-color: #303033;
@@ -346,6 +362,7 @@ header a {
   color: inherit !important;
   text-decoration: none;
 }
+
 header a:hover {
     color: inherit !important;
     text-decoration: none;
@@ -416,30 +433,65 @@ footer {
   text-align: center;
 }
 
+/* Misc */
+.contact-icon{
+  width: 15%;
+  height: auto;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #413f3e;
+}
+
 /* Mobile */
-@media (max-width: 767px) {
-  .header-title {
-    justify-content: center;
-    align-items: flex-end;
-    text-align: right;
-    font-size: 70%;
-    margin-right: 10px;
-    width: max-content;
-  }
-  .header-social {
-    margin-right: 10px;
-  }
-  .header-atlas {
-    margin-left: 10px;
-    width: auto;
-  }
-  .atlas-icon {
-    max-width: 80px;
-  }
-  .header-spacer {
-    display: none;
-  }
-  header h4 {
-    display: none;
-  }
+@media (max-width:650px) or ((hover: none) and (pointer: coarse))
+{.header-title {
+  justify-content: center;
+  align-items: flex-end;
+  text-align: right;
+  font-size: 90%;
+  margin-right: 10px;
+  width: max-content;
+}
+
+.header-social {
+  margin-right: 10px;
+}
+
+.header-atlas {
+  margin-left: 10px;
+  width: auto;
+}
+
+.atlas-icon {
+  max-width: 80px;
+}
+
+.header-spacer {
+  display: none;
+}
+
+header h4 {
+  display: none;
+}
+
+.article-summary {
+  width: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.article-full {
+  width: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.portfolio-entry {
+  max-width: 98%;
+}
 }
