--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,6 +5,7 @@
     <div class="article-header"> 
         <h2 class="article-title">{{ CONTACTTITLE }}</h2>
     </div>
-    <div class="article-content"> {{ CONTACTCONTENT }}</div>
+    <img class="contact-icon" src="{{ AUTHORIMAGE }}" alt="{{ Author }}" title="{{ Author }}">
+    <div class="article-content">{{ CONTACTCONTENT }}</div>
   </article>
 {% endblock %}
