--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,6 +134,14 @@ iframe {
   margin: 0 auto;
 }
 
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+    max-width:60%;
+	height: auto;
+}
+
 /* Portfolio */
 .portfolio {
   display: flex;
