--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 {% block content %}
   <article class="article-full">
     <div class="article-header"> 
-        <h2 class="article-title">{{ CONTACTTITLE }}</h2>
+        <h2 class="contact-title">{{ CONTACTTITLE }}</h2>
     </div>
     <img class="contact-icon" src="{{ AUTHORIMAGE }}" alt="{{ Author }}" title="{{ Author }}">
     <div class="article-content">{{ CONTACTCONTENT }}</div>
