--- a/templates/modules/page_list.html
+++ b/templates/modules/page_list.html
@@ -4,7 +4,7 @@
             <h2 class="article-title"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
             <time class="article-date" datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }} </time>
         </div>
-        <div class="article-content"> {{ article.summary }} </div>
+        {{ article.summary }}
 </article>
 {% endfor %}
 
