--- a/templates/resume.html
+++ b/templates/resume.html
@@ -5,6 +5,7 @@
     <a style="text-align: center;" href="{{RESUME}}" target="_blank">Download</a>
     <p></p>
     <p></p>
-    <embed src="{{RESUME}}" width="100%" height="100%">
+    <iframe src=  "{{RESUME}}" width="100%" height="100%">
+    </iframe> 
   </article>
 {% endblock %}
