--- a/templates/modules/footer.html
+++ b/templates/modules/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <p> <!-- /#pelican -->
-    Powered by <a href="https://getpelican.com/">Pelican</a>, using the <a href="https://github.com/nbarber20/pelican-pragmatic">Pragmatic</a> theme by Nick Barber
+    Powered by <a href="https://getpelican.com/">Pelican</a>, using the <a href="https://github.com/nbarber20/pelican-pragmatic">Pragmatic</a> theme by Nick Barburne
     </p>
 
     <p> <!-- /#about -->
