--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
+  <script src="https://kit.fontawesome.com/676f03b6f7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
